SDKs/googleapis.com/blogger/v2/java/docs/users/README.md
# users

### Available Operations

* [bloggerUsersGet](#bloggerusersget) - Gets a user by user id.

## bloggerUsersGet

Gets a user by user id.

### Example Usage

```java
package hello.world;

import org.openapis.openapi.SDK;
import org.openapis.openapi.models.operations.BloggerUsersGetRequest;
import org.openapis.openapi.models.operations.BloggerUsersGetResponse;
import org.openapis.openapi.models.operations.BloggerUsersGetSecurity;
import org.openapis.openapi.models.shared.AltEnum;
import org.openapis.openapi.models.shared.XgafvEnum;

public class Application {
    public static void main(String[] args) {
        try {
            SDK sdk = SDK.builder()
                .build();

            BloggerUsersGetRequest req = new BloggerUsersGetRequest("sequi") {{
                dollarXgafv = XgafvEnum.TWO;
                accessToken = "ipsam";
                alt = AltEnum.MEDIA;
                callback = "possimus";
                fields = "aut";
                key = "quasi";
                oauthToken = "error";
                prettyPrint = false;
                quotaUser = "temporibus";
                uploadType = "laborum";
                uploadProtocol = "quasi";
            }};            

            BloggerUsersGetResponse res = sdk.users.bloggerUsersGet(req, new BloggerUsersGetSecurity("reiciendis", "voluptatibus") {{
                oauth2 = "Bearer YOUR_ACCESS_TOKEN_HERE";
                oauth2c = "Bearer YOUR_ACCESS_TOKEN_HERE";
            }});

            if (res.user != null) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
    }
}
```
